# life-record

./: CMakeLists.txt  Cargo.toml  README.md  auto_nodejs.js  auto_python.py  auto_weibo.go  auto_weibo.java  build.sbt  commit_message.txt  cookie.txt  go.mod  hot_topics_20230706_045536.txt  links.txt  main.rs  package-lock.json  package.json  pom.xml  pubspec.yaml  stackoverflow_python.py  url_get.rs  v2ex_hot.js  v2ex_node.js  v2ex_topic.js  weibo.cs  weibo.csproj  weibo.dart  weibo.go  weibo.php  weibo_ruby.rb  weibo_scala.scala  weibo_zig.zig  weixin-collection.py  weixin-getlink.py  weixin_c.cpp  weixinlink.py  zhihu_hot.js
.dart_tool/: package_config.json
.github/workflows/: cron-job.yml  entry.yml  git-push.yml  manual-job-topic.yml  php-weibo.yml  update_hot_topics.yml  update_stackflow.yml  update_v2ex_hot.yml  update_v2ex_node.yml  update_weibo_go.yml  update_weibo_java.yml  update_weibo_node.yml  weibo_C++.yml  weibo_dart.yml  weibo_dotnet.yml  weibo_ruby.yml  weibo_scala.yml  weixin_python.yml  weixin_rust.yml  zhihu-hot.yml
bak/: links.txt  links1.txt  links2.txt
src/: main.rs
stackoverflow/202307/: hot_topics_023521.md  hot_topics_072300.md  hot_topics_073134.md  hot_topics_075634.md
temp/: weixin.py  weixin_opt.py  wexin_opt.py  zhihu.py  涉及代码优化需要考虑的事情.md
v2ex/202308/:  ChatGPT md   GPT4 md   Linux md   Quantumult X  YouTube md   rssmd  New bing md  PuerTSunitymd  V md  md  有没有人和我一样无脑给电池充电.md
weibo/: hot_topics_20230706_050518.md  hot_topics_20230706_051708.md
weibo/202307/: hot_topics_013645.md  hot_topics_014724.md  hot_topics_014809.md  (+44 more)
(+3386 files in other folders)
